[package]
name = "zentinel-sim"
version = "0.5.1"
edition = "2021"
authors = ["Zentinel Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/zentinelproxy/zentinel"
homepage = "https://github.com/zentinelproxy/zentinel"
rust-version = "1.85"
description = "Configuration simulation engine for Zentinel reverse proxy (WASM-compatible)"
keywords = ["proxy", "reverse-proxy", "simulation", "wasm", "routing"]
categories = ["simulation", "wasm", "network-programming"]

[dependencies]
# Local crates (WASM-compatible - disable runtime features)
zentinel-config = { path = "../config", version = "0.5.1", default-features = false }
zentinel-common = { path = "../common", version = "0.5.1", default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Regex for path matching
regex = "1.11"

# Error handling
thiserror = "2.0"

# Hashing for consistent hash simulation
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
insta = "1.42"
proptest = "1.6"

[features]
default = []
# No optional features - always WASM-compatible
