[package]
name = "sentinel-lua-agent"
version = "0.1.0"
edition = "2021"
authors = ["Sentinel Team"]
description = "Lua scripting agent for Sentinel proxy with Luau support"
license = "Apache-2.0"

[dependencies]
# Lua scripting with Luau
mlua = { version = "0.9", features = ["lua54", "luau", "async", "serialize", "macros", "parking_lot"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# HTTP and streaming
hyper = { version = "1.0", features = ["full"] }
bytes = "1.5"
http = "1.0"
http-body = "1.0"
http-body-util = "0.1"
tokio-stream = { version = "0.1", features = ["sync"] }

# Agent protocol
prost = "0.12"
tonic = { version = "0.10", features = ["tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_bytes = "0.11"
rmp-serde = "1.1"  # MessagePack for Lua tables

# Sandboxing and resource limits
rlimit = "0.10"
nix = { version = "0.27", features = ["process", "signal"] }

# Configuration
kdl = "4.6"
config = "0.13"
clap = { version = "4.4", features = ["derive", "env"] }

# Caching and state management
moka = { version = "0.12", features = ["future"] }
dashmap = "5.5"
arc-swap = "1.6"
lru = "0.12"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
glob = "0.3"
walkdir = "2.4"
notify = "6.1"  # File watching for script hot reload

# Compression
flate2 = "1.0"
brotli = "3.4"
zstd = "0.13"

# Encoding
base64 = "0.21"
hex = "0.4"
percent-encoding = "2.3"

# Crypto
sha2 = "0.10"
hmac = "0.12"
ring = "0.17"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
prometheus = "0.13"
opentelemetry = { version = "0.21", optional = true }
opentelemetry-prometheus = { version = "0.14", optional = true }

# Testing utilities
mockito = { version = "1.2", optional = true }
wiremock = { version = "0.5", optional = true }

# Common types from the main project
sentinel-common = { path = "../../crates/common" }
sentinel-agent-protocol = { path = "../../crates/agent-protocol" }

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"
proptest = "1.4"
criterion = "0.5"
tempfile = "3.8"
insta = "1.34"

[features]
default = ["jit", "sandbox", "hot-reload"]
jit = ["mlua/luau-jit"]
sandbox = []
hot-reload = []
debug-scripts = []
metrics = ["opentelemetry", "opentelemetry-prometheus"]
testing = ["mockito", "wiremock"]

# Lua library features
lua-json = []
lua-yaml = []
lua-msgpack = []
lua-crypto = []
lua-http = []
lua-regex = []

[[bin]]
name = "lua-agent"
path = "src/main.rs"

[[example]]
name = "script-example"
path = "examples/script_example.rs"

[[bench]]
name = "lua_execution"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true
